Fix margins on mobile

--- a/front/src/stylesheets/main.scss
+++ b/front/src/stylesheets/main.scss
@@ -27,7 +27,7 @@
 
 .container-fluid {
   @include media-breakpoint-down(xs) {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
